version 1.20.1

1. Fixed updating of Supplier Payment

[TODO: Put past changes here]

version 1.7.4

1. Make new customers active by default
2. Added Sales Returns to Posted Sales and Profit Report
3. Added post Purchase Order validation that Payment Term must be specified
4. Added Post Date column in Sales Return list
5. Fixed Total Amount in Sales Return list

version 1.7.3

1. Fixed doubled totals fields values for Adjustment In/Out, Stock Conversion, Area Inventory Report 

version 1.7.2

1. Fixed bug where sales invoices in a cancelled payment cannot be picked up by a new payment

version 1.7.1

1. Fixed Customer search bug (names like criteria not fetched)

version 1.7.0

1. Added Encoder to Payment model
2. Renamed Payment screen titles
3. Added cancelling payment instead of delete
4. Added disabling customers
5. Increased font size of submenus
5. Allowed changing SI number of Sales Return

version 1.6.0

1. Added Backup and Restore Data function
2. Added Sales Return to Stock Card Inventory Report
3. Fixed bug where displayed items get doubled
4. Organized menu items

version 1.5.1

1. Added Time Period criteria to Paid Sales Invoices list

version 1.5.0

1. Moved Posted Sales Invoices Report to its own screen
2. Added simple Sales Return

version 1.4.0

1. Added Payment Terminal to Payment model
2. Changed Payment Post Date to Datetime type
3. Added Payment Terminal criteria to Paid Sales Invoices list
4. Highlight Sales Invoices tab when opening/creating new Payment

version 1.3.2

1. Displayed Net Amount instead of Total Amount in Mark Sales Invoice list
2. Cannot post Payment with no cash/check payment
3. Added Posted Sales And Profit Report

version 1.3.1

1. Displayed Adj. In/Out Remarks under Ref. No. in Stock Card Inventory Report
2. Added cancelled Sales Invoices to Stock Card Inventory Report
3. Do not include cancelled Sales Invoices in Unpaid Sales Invoices list

version 1.3.0
